package com.bo.createdPatterns.factory;

/*
*   接口HuMan是对人类的总称，每个人种都至少具有两个方法，黑人，黄人，白人
* */
//人类总称
public interface HuMan {
    void getColor();  //每个人种的皮肤的颜色
    void talk(); //人类说话
}
